# personal-search-layer

./: .gitignore  AGENTS.md  LICENSE  README.md  prompt.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
docs/: architecture.md  code-guide.md  implementation-plan.md  project-status-summary.md  release-runbook.md
eval/: README.md  golden_retrieval.jsonl  router_intents.jsonl  run_answer_eval.py  run_golden_eval.py  summarize_eval.py  verifier_cases.jsonl
reference_docs/smoke_corpus/: checklist.txt  notes.md  overview.txt
scripts/: ingest.py  maintenance.py  query.py
src/personal_search_layer/: __init__.py  answering.py  config.py  embeddings.py  indexing.py  models.py  multihop.py  orchestration.py  rerank.py  retrieval.py  router.py  router_policy.json  telemetry.py  ui.py  verification.py
src/personal_search_layer/ingestion/: __init__.py  chunking.py  loaders.py  normalization.py  pipeline.py
src/personal_search_layer/storage/: __init__.py  db.py
tests/: test_abstain_behavior.py  test_answer_eval.py  test_answering.py  test_chunking.py  test_conflict_reporting.py  test_embeddings.py  test_eval_summary.py  test_golden_retrieval.py  test_ingestion.py  test_loaders.py  test_multihop.py  test_normalization.py  test_orchestration.py  test_query_answer_mode.py  test_rerank.py  test_retrieval.py  test_retrieval_query_parsing.py  test_router.py  test_router_accuracy.py  test_router_policy.py  test_smoke_pipeline.py  test_storage_foundation.py  test_verification.py
